--- a/indexfarhanah.html
+++ b/indexfarhanah.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    * {
+    <style>
+        h1 {
         font-family: Arial;
-    }
+  }
+
+    body {
+        background-image: url(image.jpg);
+        background-position: center;
+}
+</style>
 
 </head>
 
 <body>
     
 </body>
+    <h1 > 18DDT19F1036, INTAN NUR FARHANAH BINTI FADZIL & DDT4D</h1>
 </html>
